--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,15 +1,13 @@
+BROWSER =
 URL = https://sweetshop.netlify.app/sweets
-
 EMAIL = mahendraqa27@gmail.com
-
 PASSWORD = Mahendra@27
-
-EXPLICIT_WAIT_TIMEOUT = 10
-
+EXPLICIT_WAIT_TIMEOUT = 40
 STEP_TIME = 3
-
 PAGE_LOAD_TIMEOUT = 10
-
 SCREENSHOT_PATH = src/test/resources/screenshots
-
 RECORD_VIDEO_PATH = src/test/resources/video
+RECORD_VIDEO=false
+SCREENSHOT_STEP_FAIL=true
+SCREENSHOT_STEP_PASS=false
+SCREENSHOT_STEP_ALL=false
