--- a/src/main/java/objects/sweet_shop_locators.properties
+++ b/src/main/java/objects/sweet_shop_locators.properties
@@ -12,7 +12,6 @@ PASSWORD=//input[@id='exampleInputPassword']
 LOGIN_BTN=//button[@id='btn_pq55ne3vr']
 SUCCESSFULLY_LOGIN=//p[@class='lead']
 
-
 # ABOUT PAGE
 ABOUT_HEADER=//h1[normalize-space()='Sweet Shop Project']
 
@@ -39,7 +38,9 @@ CONTINUE_CHECKOUT_BTN=//button[normalize-space()='Continue to checkout']
 
 # HOME PAGE
 HOME_HEADER=//h1[normalize-space()='Welcome to the sweet shop!']
-
+POPULAR_PRODUCTS_SECTION=//div[@class='row text-center']/div//h4
+BASKET_COUNT=//a[@class='nav-link']/span
 
 # PRODUCT PAGE
-
+PRODUCT_HEADER=//h1[normalize-space()='Browse sweets']
+PRODUCT_LIST=//div[@class='container']//div/h4
