--- a/src/main/java/objects/sweet_shop_locators.properties
+++ b/src/main/java/objects/sweet_shop_locators.properties
@@ -9,7 +9,7 @@ BASKET_PAGE=//a[@href='/basket']
 LOGIN_HEADER=//h1[normalize-space()='Login']
 EMAIL_ADDRESS=//input[@id='exampleInputEmail']
 PASSWORD=//input[@id='exampleInputPassword']
-LOGIN_BTN=//button[@id='btn_pq55ne3vr']
+LOGIN_BTN=.btn-primary
 SUCCESSFULLY_LOGIN=//p[@class='lead']
 
 # ABOUT PAGE
