--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -5,8 +5,8 @@ PASSWORD = Mahendra@27
 EXPLICIT_WAIT_TIMEOUT = 40
 STEP_TIME = 3
 PAGE_LOAD_TIMEOUT = 10
-SCREENSHOT_PATH = src/test/resources/screenshots
-RECORD_VIDEO_PATH = src/test/resources/video
+SCREENSHOT_PATH = ./exports/screenshots/
+RECORD_VIDEO_PATH = ./exports/videos/
 RECORD_VIDEO=false
 SCREENSHOT_STEP_FAIL=true
 SCREENSHOT_STEP_PASS=false
